--- a/.config/sway/config
+++ b/.config/sway/config
@@ -20,12 +20,14 @@ set $right Right
 # Your preferred terminal emulator
 set $term urxvt
 # Your preferred application launcher
-set $menu dmenu_run
+set $menu bemenu-run --wrap -l 10 -i --fn "xos4 Terminus" 10
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
+# output * bg /home/teo/Pictures/.wallpaper/wallpaper.jpg fill
 output * bg /home/teo/Pictures/.wallpaper/wallpaper.jpg fill
+
 #
 # Example configuration:
 #
@@ -47,9 +49,9 @@ output * bg /home/teo/Pictures/.wallpaper/wallpaper.jpg fill
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
-input "4152:4969:SteelSeries_Sensei_Raw_Gaming_" {
+input "4152:4969:SteelSeries_Sensei_Raw_Gaming_Mouse" {
 	accel_profile flat
-	pointer_accel -0.3
+	pointer_accel -0.2
 }
 
 ### Key bindings
