--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,7 +15,7 @@ set $up Up
 set $right Right
 # Your preferred terminal emulator
 #set $term urxvt
-set $term env WAYLAND_DISPLAY= alacritty
+set $term alacritty
 # Your preferred application launcher
 set $menu bemenu-run --wrap -l 10 -i --fn "xos4 Terminus" 10
 set $wallpaper /home/teo/Pictures/.wallpaper/wallpaper.jpg
