--- a/.config/sway/config
+++ b/.config/sway/config
@@ -41,11 +41,10 @@ input "4152:4969:SteelSeries_Sensei_Raw_Gaming_Mouse" {
 # Key bindings
 #
 bindsym $mod+Return exec $term
-bindsym $mod+Shift+q kill
-bindsym $mod+d exec $menu
+bindsym $mod+q kill
 floating_modifier $mod normal
 bindsym $mod+Shift+c reload
-bindsym $mod+Shift+e exit
+bindsym $mod+Shift+q exit
 bindsym $mod+l exec $lockscreen
 
 # Move the foucts
@@ -78,7 +77,7 @@ bindsym $mod+v splitv
 
 # Switch the current container between different layout styles
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 
 # Make the current focus fullscreen
