--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,6 +32,11 @@ exec swayidle \
 #
 output * bg $wallpaper fill
 
+output DP-1 position 0 0
+output DP-1 transform 90 anticlockwise
+output DP-2 position 1080 450
+
+
 input "4152:4969:SteelSeries_Sensei_Raw_Gaming_Mouse" {
 	accel_profile flat
 	pointer_accel -0.2
