--- a/.config/sway/config
+++ b/.config/sway/config
@@ -31,21 +31,11 @@ exec swayidle \
 #
 # Inputs/Outputs
 #
-output * bg $wallpaper fill
+output * bg #000000 solid_color
 
 # Disable screen laptop when lid is closed
 bindswitch lid:on output eDP-1 disable
 bindswitch lid:off output eDP-1 enable
-
-#
-# Example configuration:
-#
-output * bg $wallpaper fill
-
-input "1008:4504:HP_HP_USB_1000dpi_Laser_Mouse" {
-	accel_profile flat
-	pointer_accel -0.2
-}
 
 input "1008:4504:HP_HP_USB_1000dpi_Laser_Mouse" {
 	accel_profile flat
@@ -53,6 +43,10 @@ input "1008:4504:HP_HP_USB_1000dpi_Laser_Mouse" {
 }
 
 input "1739:33521:SYNA3071:00_06CB:82F1_Touchpad" {
+	natural_scroll enable
+}
+
+input "2:14:ETPS/2_Elantech_Touchpad" {
 	natural_scroll enable
 }
 
