mako: changed background color

--- a/.config/mako/config
+++ b/.config/mako/config
@@ -6,7 +6,7 @@ anchor=top-right
 
 font=xos4 terminus
 text-color=#C1B7B7
-background-color=#030D0D
+background-color=#082626
 padding=30
 border-size=0
 markup=1
