--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -92,19 +92,19 @@ tabspaces: 4
 font:
   # Normal (roman) font face
   normal:
-    family: "xos4 Terminus"
+    family: "Terminus"
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   # Bold font face
   bold:
-    family: "xos4 Terminus"
+    family: "Terminus"
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   # Italic font face
   italic:
-    family: "xos4 Terminus"
+    family: "Terminus"
     # The `style` can be specified to pick a specific face.
     style: Regular
 
