--- a/.config/sway/config
+++ b/.config/sway/config
@@ -21,6 +21,7 @@ set $lockscreen swaylock --color 333333
 exec_always xrdb /home/teo/.config/resources/.Xresources
 exec_always mako
 
+exec redshift -l 45.4624:9.1293 -t 6500:4000
 exec waybar -l trace > /home/teo/Documents/waybar.log
 exec swayidle \
 	timeout 300 'swaylock --image /home/teo/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill' \
@@ -145,3 +146,10 @@ client.focused				#082626 #082626 #60A6A6 #030D0D #082626
 client.focused_inactive		#030D0D #030D0D #60A6A6 #030D0D #030D0D
 client.unfocused			#030D0D #030D0D #60A6A6 #030D0D #030D0D
 client.urgent				#CC6690 #CC6690 #60A6A6 #030D0D #CC6690
+
+# Criteria
+workspace 1 output DP-1
+workspace 2 output DP-2
+workspace 3 output DP-2
+workspace 4 output DP-2
+for_window [class="qutebrowser"] move container to workspace 1
