mako: changed text color

--- a/.config/mako/config
+++ b/.config/mako/config
@@ -5,7 +5,7 @@ sort=-time
 anchor=top-right
 
 font=Terminus
-text-color=#C1B7B7
+text-color=#60A6A6
 background-color=#082626
 padding=30
 border-size=0
