--- a/.config/sway/config
+++ b/.config/sway/config
@@ -37,6 +37,11 @@ output * bg #000000 solid_color
 bindswitch lid:on output eDP-1 disable
 bindswitch lid:off output eDP-1 enable
 
+input "4152:4969:SteelSeries_Sensei_Raw_Gaming_Mouse" {
+	accel_profile flat
+	pointer_accel -0.2
+}
+
 input "1008:4504:HP_HP_USB_1000dpi_Laser_Mouse" {
 	accel_profile flat
 	pointer_accel -0.2
