--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -11,7 +11,7 @@
         "disable-bar-scroll": true,
         "all-outputs": true,
         "format": "{name}",
-        "persistant_workspaces": {
+        "persistent_workspaces": {
         	"1": [],
         	"2": [],
         	"3": [],
