sway: added more media button

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -123,6 +123,10 @@ bindsym $mod+r mode "resize"
 # Audio
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
 bindsym XF86AudioLowerVolume exec amixer sset Master 5%-
+bindsym XF86AudioPlay exec mpc toggle
+bindsym XF86AudioStop exec mpc stop
+bindsym XF86AudioNext exec mpc next
+bindsym XF86AudioPrev exec mpc prev
 
 #
 # Graphics
