--- a/.config/sway/config
+++ b/.config/sway/config
@@ -20,8 +20,8 @@ set $lockscreen swaylock --color 333333
 #
 exec_always xrdb /home/teo/.config/resources/.Xresources
 exec_always mako
+exec_always kanshi
 
-exec kanshi
 exec redshift -l 45.4624:9.1293 -t 6500:4000
 exec waybar -l trace > /home/teo/Documents/waybar.log
 exec swayidle \
@@ -151,8 +151,8 @@ client.unfocused			#030D0D #030D0D #60A6A6 #030D0D #030D0D
 client.urgent				#CC6690 #CC6690 #60A6A6 #030D0D #CC6690
 
 # Criteria
-workspace 1 output DP-1
-workspace 2 output DP-2
-workspace 3 output DP-2
-workspace 4 output DP-2
+workspace 1 output DP-2
+workspace 2 output DP-1
+workspace 3 output DP-1
+workspace 4 output DP-1
 for_window [class="qutebrowser"] move container to workspace 1
