sway: added window rules

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -156,3 +156,5 @@ workspace 2 output DP-1
 workspace 3 output DP-1
 workspace 4 output DP-1
 for_window [class="qutebrowser"] move container to workspace 1
+for_window [class="Spotify"] move container to workspace 4
+for_window [class="Steam"] move container to workspace 1
