--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -71,21 +71,21 @@ scrolling:
 font:
   # Normal (roman) font face
   normal:
-    family: "Terminus"
+    family: "JetBrains Mono"
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   # Bold font face
   bold:
-    family: "Terminus"
+    family: "JetBrains Mono"
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Bold
 
   # Italic font face
   italic:
-    family: "Terminus"
+    family: "JetBrains Mono"
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Italic
 
   # Point size
   size: 11.0
@@ -94,7 +94,7 @@ font:
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
   offset:
     x: 0
-    y: 0
+    y: -1
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the right,
