waybar: changed interface name

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -32,7 +32,7 @@
         "format": "MEM {}%"
     },
     "network": {
-        "interface": "wlp5s0",
+        "interface": "wlan0",
         "format-ethernet": "{ifname}",
         "format-disconnected": "Offline"
     },
