--- a/.config/sway/config
+++ b/.config/sway/config
@@ -36,6 +36,9 @@ exec swayidle \
 #
 output * bg $wallpaper fill
 
+bindswitch lid:on output eDP-1 disable
+bindswitch lid:off output eDP-1 enable
+
 input "4152:4969:SteelSeries_Sensei_Raw_Gaming_Mouse" {
 	accel_profile flat
 	pointer_accel -0.2
