--- a/.config/sway/config
+++ b/.config/sway/config
@@ -23,7 +23,7 @@ exec_always mako
 exec_always kanshi
 
 exec wlsunset -l 45.4624 -L 9.1293 -t 4000 -T 6500
-exec waybar -l trace > $HOME/Documents/waybar.log
+exec waybar
 exec swayidle \
 	timeout 300 'swaylock --image $HOME/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill' \
 	timeout 600 'swaymsg "output * dpms off"' \
