--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -26,7 +26,7 @@
     	"format": "{:%Y/%m/%d %H:%M}"
     },
     "cpu": {
-        "format": "CPU {}%"
+        "format": "CPU {usage}%"
     },
     "memory": {
         "format": "MEM {}%"
