--- a/.config/sway/config
+++ b/.config/sway/config
@@ -21,6 +21,7 @@ set $lockscreen swaylock --color 333333
 exec_always xrdb $HOME/.config/resources/.Xresources
 exec_always mako
 exec_always kanshi
+exec_always megasync
 
 exec wlsunset -l 45.4624 -L 9.1293 -t 4000 -T 6500
 exec waybar
